--- a/styles.css
+++ b/styles.css
@@ -2,7 +2,9 @@
 .header {
     overflow: hidden;
     background-color: #f1f1f1;
-    /*padding: 20px 10px;*/
+    padding: 20px 10px;
+    width: 100%;
+    position : fixed;
   }
   
   /* Style the header links */
@@ -36,8 +38,8 @@
   }
   
   /* Float the link section to the right */
-  .header-right {
-    float: right;
+  .header-left {
+    float: left;
   }
   
   /* Add media queries for responsiveness - when the screen is 500px wide or less, stack the links on top of each other */
@@ -47,7 +49,7 @@
       display: block;
       text-align: left;
     }
-    .header-right {
+    .header-left {
       float: none;
     }
   }
