--- a/styles.css
+++ b/styles.css
@@ -3,11 +3,16 @@
     overflow: hidden;
     background-color: #f1f1f1;
     padding: 20px 10px;
-    width: 100%;
-    margin-top: 0;
-    position : fixed;
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
   }
   
+  body>.header{
+    position:fixed
+  }  
+
   /* Style the header links */
   .header a {
     float: left;
