--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,5 @@
 /* Style the header with a grey background and some padding */
-.header {
+  .header {
     overflow: hidden;
     background-color: #f1f1f1;
     padding: 20px 10px;
@@ -71,13 +71,13 @@
   }
 
   .accueil{
-    padding: 10%;
+    padding: 100px;
   }
 
   .circular-image {
     border-radius: 50%; /* Applique la forme de cercle */
-    width: 150px; /* Ajustez la largeur selon vos besoins */
-    height: 150px; /* Ajustez la hauteur selon vos besoins */
+    width: 200px; /* Ajustez la largeur selon vos besoins */
+    height: 200px; /* Ajustez la hauteur selon vos besoins */
     overflow: hidden; /* Assurez-vous que l'image reste à l'intérieur du cercle */
     object-fit: cover; /* Ajuste la taille de l'image pour remplir le cercle */
   }
